# ru_normalizr

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  PYPI_RELEASE_CHECKLIST.md  README.md  VERSIONING.md  __init__.py  __main__.py  _morph.py  abbreviation_context.py  abbreviation_rules.py  abbreviations.py  caps.py  constants.py  dates_time.py  dictionary.py  latinization.py  normalizer.py  numbering.py  numerals.py  options.py  ordinal_utils.py  pipeline.py  preprocess.py  preprocess_utils.py  pyproject.toml  refactoring_plan.md  roman_numerals.py  text_context.py  years.py  years_context.py
.github/workflows/: ci.yml  release.yml
dictionaries/: 65_ЛАТИНИЦА@.dic
numerals/: __init__.py  _constants.py  _helpers.py  _hyphen.py  _num2words.py  cardinals.py  decimals.py  ordinals.py
scripts/: dev.py
tests/: test_api.py  test_cyrillic_stress_marks.py  test_hyphen_tokens.py  test_regressions.py  test_reported_regressions.py  test_stages.py
